# anylist-to-mfp

./: .env.example  pyproject.toml
.github/workflows/: daily-update.yml
anylist_to_mfp/: __main__.py  core.py
